# cdb-productivity-api

./: .gitignore  LICENSE  README.md
cognitics/: CMakeLists.txt  migrations.code-workspace
cognitics/ObjTest/: OBJBuildDEM.cpp  OBJRender.cpp  OBJRender.h  Obj2CDB.cpp  Obj2CDB.h  ObjTest.cpp  ObjTest.vcxproj  ObjTest.vcxproj.filters
cognitics/cdb/: cdb.cpp
cognitics/cdb-elev/: cdb-elev.cpp
cognitics/cdb-inject/: cdb-inject.cpp  cdb-inject.vcxproj
cognitics/cdb-lod/: cdb-lod.cpp
cognitics/cdb-sample/: cdb-sample.cpp
cognitics/cdb-service/: cdb-service.cpp
cognitics/cdbinfo/: cdbinfo.cpp  cdbinfo.vcxproj  cdbinfo.vcxproj.filters
cognitics/cognitics/: buildObjFromScene.cpp  cognitics.sln  cognitics.vcxproj  cognitics.vcxproj.filters
cognitics/doc/: cdb-gdal-documentation.html  cdb-info.md  cdb-inject.md  cdb-lod.md  cdb-productivity-suite-index.md  cdb-service.md  cdbtranslate.md  mesh2cdb.md  readme.md
cognitics/htdocs/: index.html  view.html
cognitics/include/: Queue.h  Version.h
cognitics/include/CoordinateSystems/: EGM.h  EGM2008.h  EGMTransform.h  EllipsoidTangentPlane.h  GeoidTangentPlane.h  IGeodeticTransform.h  ILocalTangentPlane.h  Image.h  SphereTangentPlane.h  WGS84.h  WGS84Transform.h
cognitics/include/ModelKit/: Attachment.h  AttachmentPoint.h  AvoidArea.h  AvoidClipper.h  Connection.h  CrossSection.h  Edge.h  Face.h  FlightToCSM.h  Material.h  ModelGenerator.h  ModelInstance.h  ModelKit.h  RGBA.h  Reference.h  SceneData.h  TextureReference.h  TunnelFeatureGenerator.h
cognitics/include/b64/: base64.h
cognitics/include/cad/: AttributeDictionary.h
cognitics/include/ccl/: Action.h  ArgumentParser.h  AttributeContainer.h  BigEndian.h  BindStream.h  BitField.h  Endian.h  Expression.h  FileInfo.h  JobManager.h  Key.h  LSBitField.h  LittleEndian.h  Log.h  LogBuffer.h  LogStream.h  MSBitField.h  Number.h  ObjLog.h  Op.h  OpenFlightParser.h  Profile.h  ProgressObserver.h  Runnable.h  ScopedTimer.h  StringUtils.h  Timer.h  Value.h  Variant.h  VariantException.h  attributes.h  binary.h  ccl.h  ccltime.h  cds.h  cds_sqlite.h  config.h  cstdint.h  date.h  datetime.h  (+10 more)
cognitics/include/cdb_tile/: Coordinates.h  CoordinatesRange.h  LOD.h  Latitude.h  Longitude.h  Tile.h
cognitics/include/cdb_util/: FeatureDataDictionary.h  cdb_inject.h  cdb_lod.h  cdb_sample.h  cdb_service.h  cdb_util.h
cognitics/include/cogcuda/: ElevationSampler.h  Sampler.cuh
cognitics/include/ctl/: BlockList.h  CGrid.h  ConstraintMap.h  DelaunayTriangulation.h  Edge.h  ID.h  LocationResult.h  QTriangulate.h  QuadEdge.h  Subdivision.h  TIN.h  Util.h  Vector.h  Vertex.h  ctl.h
cognitics/include/cts/: CS_AngularUnit.h  CS_CompoundCoordinateSystem.h  CS_CoordinateSystem.h  CS_CoordinateSystemAuthorityFactory.h  CS_CoordinateSystemFactory.h  CS_Datum.h  CS_Ellipsoid.h  CS_FittedCoordinateSystem.h  CS_GeocentricCoordinateSystem.h  CS_GeographicCoordinateSystem.h  CS_HorizontalCoordinateSystem.h  CS_HorizontalDatum.h  CS_Info.h  CS_LinearUnit.h  CS_LocalCoordinateSystem.h  CS_LocalDatum.h  CS_PrimeMeridian.h  CS_ProjectedCoordinateSystem.h  CS_Projection.h  CS_Unit.h  CS_VerticalCoordinateSystem.h  CS_VerticalDatum.h  CT_CoordinateTransformation.h  CT_CoordinateTransformationAuthorityFactory.h  CT_CoordinateTransformationFactory.h  CT_MathTransform.h  CT_MathTransformFactory.h  FlatEarthProjection.h  ProjInfo.h  TransformRegistry.h  WGS84FromFlatEarthMathTransform.h  WGS84FromOrthographicMathTransform.h  WGS84Orthographic.h  WGS84ToFlatEarthMathTransform.h  WGS84ToOrthographicMathTransform.h  cts.h  pt.h
cognitics/include/dbflib/: DBaseRecord.h
cognitics/include/dbi/: Connection.h  Diag.h  Environment.h  Handle.h  InsertQueue.h  ScopedTransaction.h  Statement.h  dbi.h
cognitics/include/dbi_sqlite/: File.h  Statement.h  dbi_sqlite.h
cognitics/include/dom/: Attr.h  CDATASection.h  CharacterData.h  Comment.h  DOMConfiguration.h  DOMError.h  DOMErrorHandler.h  DOMException.h  DOMImplementation.h  DOMLocator.h  Document.h  DocumentFragment.h  DocumentType.h  Element.h  Entity.h  EntityReference.h  LSException.h  LSInput.h  LSOutput.h  LSParser.h  LSParserFilter.h  LSResourceResolver.h  LSSerializer.h  LSSerializerFilter.h  Node.h  NodeFilter.h  NodeIterator.h  Notation.h  ProcessingInstruction.h  Range.h  RangeException.h  Text.h  TreeWalker.h  TypeInfo.h  UserDataHandler.h  base.h  dom.h
cognitics/include/elev/: Cache.h  CacheEntry.h  DataPost.h  DataSource.h  DataSourceManager.h  DataSource_Raster.h  DataSource_Raster_GDAL.h  Elevation.h  Elevation_DSM.h  Line.h  SimpleDEMReader.h
cognitics/include/features/: FeatureInfo.h  GMLParser.h  GsBuildings.h
cognitics/include/flt/: BinarySeparatingPlane.h  BoundingBox.h  BoundingConvexHull.h  BoundingCylinder.h  BoundingHistogram.h  BoundingSphere.h  BoundingVolumeCenter.h  BoundingVolumeOrientation.h  CAT.h  CATData.h  ClipRegion.h  ColorPalette.h  Comment.h  Curve.h  DegreeOfFreedom.h  ExtendedMaterialAlpha.h  ExtendedMaterialAmbient.h  ExtendedMaterialBumpMap.h  ExtendedMaterialDiffuse.h  ExtendedMaterialEmissive.h  ExtendedMaterialHeader.h  ExtendedMaterialLightMap.h  ExtendedMaterialNormalMap.h  ExtendedMaterialReflectionMap.h  ExtendedMaterialShadowMap.h  ExtendedMaterialSpecular.h  Extension.h  ExtensionFieldBoolean.h  ExtensionFieldDouble.h  ExtensionFieldFloat.h  ExtensionFieldString.h  (+71 more)
cognitics/lmbundle2obj/: lmbundle2obj.cpp  lmbundle2obj.vcxproj  lmbundle2obj.vcxproj.filters
cognitics/mesh2cdb/: MeshRender.h  mesh2cdb-rest.cpp  mesh2cdb.cpp  mesh2cdb.h  mesh2cdb.vcxproj  mesh2cdb.vcxproj.filters  mesh2cdb.xml  meshconvert.cpp  meshrender.cpp  quickobj.cpp  quickobj.h
cognitics/meshgen/: meshgen.cpp  meshgen.vcxproj  meshgen.vcxproj.filters
cognitics/nn-pre/: nn-MeshRender.h  nn-meshrender.cpp  nn-pre.cpp  nn-pre.h
cognitics/obj-enu/: obj-enu.cpp  quickobj.cpp  quickobj.h
cognitics/obj-extract/: obj-extract.cpp  obj-extract.h  quickobj.cpp
cognitics/obj-flt/: obj-flt.cpp  obj-flt.h
cognitics/obj-preprocess/: MeshRender.h  meshrender.cpp  obj-preprocess.cpp  quickobj.cpp
cognitics/qgis-scripts/: QCDB.py
(+535 files in other folders)
