

cmake_minimum_required(VERSION 2.8)
project (cognitics)
#cmake -G "Unix Makefiles" -DTHIRD_PARTY_DIR=/home/kbentley/cognitics/ThirdParty -DCMAKE_INSTALL_PREFIX=/home/kbentley/meshgen ..
set(CMAKE_CXX_FLAGS "-lstdc++fs -std=c++11 -g -o3")

set(CMAKE_EXE_LINKER_FLAGS "-Wl,-rpath='/usr/local/lib',--start-group")
set(IPP_STATIC "ON")


include_directories("./include")
include_directories("./include/ccl/Unix")
include_directories("${THIRD_PARTY_DIR}/fbxsdk/include")
include_directories("${THIRD_PARTY_DIR}/boost_1_69_0")
include_directories("${THIRD_PARTY_DIR}/linux_x64/include")
include_directories("${THIRD_PARTY_DIR}/glew/linux_x64/include")
include_directories("${THIRD_PARTY_DIR}/glut/linux_x64/include")
include_directories("${THIRD_PARTY_DIR}/ipp2019_linux_x64/include")

set(COGCORE_HEADERS
    ./include/cad/AttributeDictionary.h
    ./include/scenegraphobj/scenegraphobj.h
    ./include/ccl/ccl.h
    ./include/ccl/FileInfo.h
    ./include/ccl/Value.h
    ./include/ccl/AttributeContainer.h
    ./include/ccl/Key.h
    ./include/ccl/VariantException.h
    ./include/ccl/ScopedTimer.h
    ./include/ccl/ccltime.h
    ./include/ccl/cds.h
    ./include/ccl/LogStream.h
    ./include/ccl/Endian.h
    ./include/ccl/Log.h
    ./include/ccl/LittleEndian.h
    ./include/ccl/Number.h
    ./include/ccl/cds_sqlite.h
    ./include/ccl/LogBuffer.h
    ./include/ccl/attributes.h
    ./include/ccl/uri.h
    ./include/ccl/Expression.h
    ./include/ccl/sem.h
    ./include/ccl/LSBitField.h
    ./include/ccl/BigEndian.h
    ./include/ccl/inspection.h
    ./include/ccl/Op.h
    ./include/ccl/binary.h
    ./include/ccl/datetime.h
    ./include/ccl/BitField.h
    ./include/ccl/thread_local_ptr.h
    ./include/ccl/md5.h
    ./include/ccl/ProgressObserver.h
    ./include/ccl/Timer.h
    ./include/ccl/Profile.h
    ./include/ccl/date.h
    ./include/ccl/Variant.h
    ./include/ccl/MSBitField.h
    ./include/ccl/Action.h
    ./include/ccl/StringUtils.h
    ./include/ccl/mutex.h
    ./include/ccl/Runnable.h
    ./include/ccl/object.h
    ./include/ccl/JobManager.h
    ./include/ccl/BindStream.h
    ./include/ccl/primitive.h
    ./include/ccl/uuid.h
    ./include/ccl/cstdint.h
    ./include/ccl/ObjLog.h
    ./include/ccl/config.h
    ./include/ccl/miniz.h
    ./include/ccl/ArgumentParser.h
    ./include/sfa_file_factory/sfa_file_factory.h
    ./include/gltf/GltfData.h
    ./include/gltf/Tileset.h
    ./include/gltf/GltfInfo.h
    ./include/gltf/GltfJson.h
    ./include/elev/SimpleDEMReader.h
    ./include/elev/DataSource_Raster.h
    ./include/elev/DataSource.h
    ./include/elev/CacheEntry.h
    ./include/elev/DataPost.h
    ./include/elev/Cache.h
    ./include/elev/Elevation_DSM.h
    ./include/elev/DataSource_Raster_GDAL.h
    ./include/elev/Line.h
    ./include/elev/DataSourceManager.h
    ./include/elev/Elevation.h
    ./include/scenegraphflt/scenegraphflt.h
    ./include/tg/TerrainGenerator.h
    ./include/tg/FbxTerrainGenerator.h
    ./include/tg/GltfTerrainGenerator.h
    ./include/tg/ObjTerrainGenerator.h
    ./include/tg/OpenFlightTerrainGenerator.h
    ./include/cts/ProjInfo.h
    ./include/cts/CS_CoordinateSystemFactory.h
    ./include/cts/CS_FittedCoordinateSystem.h
    ./include/cts/WGS84FromFlatEarthMathTransform.h
    ./include/cts/CS_CoordinateSystem.h
    ./include/cts/pt.h
    ./include/cts/CS_Datum.h
    ./include/cts/WGS84ToFlatEarthMathTransform.h
    ./include/cts/CS_VerticalDatum.h
    ./include/cts/WGS84Orthographic.h
    ./include/cts/CS_ProjectedCoordinateSystem.h
    ./include/cts/CS_VerticalCoordinateSystem.h
    ./include/cts/CS_Projection.h
    ./include/cts/CS_PrimeMeridian.h
    ./include/cts/CS_GeographicCoordinateSystem.h
    ./include/cts/CT_CoordinateTransformationAuthorityFactory.h
    ./include/cts/CT_CoordinateTransformationFactory.h
    ./include/cts/CT_MathTransformFactory.h
    ./include/cts/CS_CoordinateSystemAuthorityFactory.h
    ./include/cts/CS_CompoundCoordinateSystem.h
    ./include/cts/CS_Ellipsoid.h
    ./include/cts/WGS84ToOrthographicMathTransform.h
    ./include/cts/CS_Unit.h
    ./include/cts/CS_LocalCoordinateSystem.h
    ./include/cts/cts.h
    ./include/cts/FlatEarthProjection.h
    ./include/cts/CS_HorizontalDatum.h
    ./include/cts/CS_GeocentricCoordinateSystem.h
    ./include/cts/CS_LinearUnit.h
    ./include/cts/CS_AngularUnit.h
    ./include/cts/CS_LocalDatum.h
    ./include/cts/CS_Info.h
    ./include/cts/CS_HorizontalCoordinateSystem.h
    ./include/cts/TransformRegistry.h
    ./include/cts/WGS84FromOrthographicMathTransform.h
    ./include/cts/CT_CoordinateTransformation.h
    ./include/cts/CT_MathTransform.h
    ./include/scenegraph/ExtentsVisitor.h
    ./include/scenegraph/MappedTexture.h
    ./include/scenegraph/LineString.h
    ./include/scenegraph/Scene.h
    ./include/scenegraph/GroupingVisitor.h
    ./include/scenegraph/Material.h
    ./include/scenegraph/DrapeVisitor.h
    ./include/scenegraph/CoordinateTransformVisitor.h
    ./include/scenegraph/TerrainCullingVisitor.h
    ./include/scenegraph/MappedTextureMatrix.h
    ./include/scenegraph/UserData.h
    ./include/scenegraph/FlattenVisitor.h
    ./include/scenegraph/scenegraph.h
    ./include/scenegraph/LightPoint.h
    ./include/scenegraph/Relationship.h
    ./include/scenegraph/LOD.h
    ./include/scenegraph/Octree.h
    ./include/scenegraph/SceneCropper.h
    ./include/scenegraph/Face.h
    ./include/scenegraph/Color.h
    ./include/scenegraph/SetTexturePathVisitor.h
    ./include/scenegraph/Node.h
    ./include/scenegraph/ExternalReference.h
    ./include/scenegraph/TransformVisitor.h
    ./include/scenegraph/Visitor.h
    ./include/rapidjson/prettywriter.h
    ./include/rapidjson/schema.h
    ./include/rapidjson/memorybuffer.h
    ./include/rapidjson/rapidjson.h
    ./include/rapidjson/filereadstream.h
    ./include/rapidjson/writer.h
    ./include/rapidjson/error/en.h
    ./include/rapidjson/error/error.h
    ./include/rapidjson/memorystream.h
    ./include/rapidjson/ostreamwrapper.h
    ./include/rapidjson/encodedstream.h
    ./include/rapidjson/reader.h
    ./include/rapidjson/internal/ieee754.h
    ./include/rapidjson/internal/meta.h
    ./include/rapidjson/internal/strtod.h
    ./include/rapidjson/internal/swap.h
    ./include/rapidjson/internal/strfunc.h
    ./include/rapidjson/internal/itoa.h
    ./include/rapidjson/internal/biginteger.h
    ./include/rapidjson/internal/dtoa.h
    ./include/rapidjson/internal/diyfp.h
    ./include/rapidjson/internal/pow10.h
    ./include/rapidjson/internal/regex.h
    ./include/rapidjson/internal/stack.h
    ./include/rapidjson/pointer.h
    ./include/rapidjson/stream.h
    ./include/rapidjson/document.h
    ./include/rapidjson/istreamwrapper.h
    ./include/rapidjson/allocators.h
    ./include/rapidjson/filewritestream.h
    ./include/rapidjson/stringbuffer.h
    ./include/rapidjson/encodings.h
    ./include/rapidjson/fwd.h
    ./include/rapidjson/msinttypes/inttypes.h
    ./include/rapidjson/msinttypes/stdint.h
    ./include/flt/ExtensionFieldBoolean.h
    ./include/flt/VertexWithColorUV.h
    ./include/flt/SoundPalette.h
    ./include/flt/ExtensionFieldXML.h
    ./include/flt/ColorPalette.h
    ./include/flt/InstanceDefinition.h
    ./include/flt/BoundingCylinder.h
    ./include/flt/OpenFlight.h
    ./include/flt/MultiTexture.h
    ./include/flt/MeshPrimitive.h
    ./include/flt/VertexList.h
    ./include/flt/Curve.h
    ./include/flt/BinarySeparatingPlane.h
    ./include/flt/ExtendedMaterialEmissive.h
    ./include/flt/RotateScaleToPoint.h
    ./include/flt/ExtendedMaterialAmbient.h
    ./include/flt/MaterialPalette.h
    ./include/flt/VertexPalette.h
    ./include/flt/ExtensionFieldInteger.h
    ./include/flt/LightPointAnimationPalette.h
    ./include/flt/BoundingHistogram.h
    ./include/flt/RoadPath.h
    ./include/flt/Replicate.h
    ./include/flt/PopExtension.h
    ./include/flt/ExtendedMaterialHeader.h
    ./include/flt/PushSubface.h
    ./include/flt/ExtensionFieldString.h
    ./include/flt/PushExtension.h
    ./include/flt/ExtendedMaterialDiffuse.h
    ./include/flt/Translate.h
    ./include/flt/flt.h
    ./include/flt/BoundingVolumeCenter.h
    ./include/flt/PopSubface.h
    ./include/flt/Matrix.h
    ./include/flt/Unknown.h
    ./include/flt/Record.h
    ./include/flt/ExtensionGUIDPalette.h
    ./include/flt/NameTable.h
    ./include/flt/Vector.h
    ./include/flt/UVList.h
    ./include/flt/Mesh.h
    ./include/flt/LightSource.h
    ./include/flt/LightSourcePalette.h
    ./include/flt/LightPointSystem.h
    ./include/flt/ShaderPalette.h
    ./include/flt/GeneralMatrix.h
    ./include/flt/Put.h
    ./include/flt/ClipRegion.h
    ./include/flt/Sound.h
    ./include/flt/ExtensionFieldDouble.h
    ./include/flt/PushAttribute.h
    ./include/flt/PushLevel.h
    ./include/flt/RoadConstruction.h
    ./include/flt/ExtendedMaterialBumpMap.h
    ./include/flt/Header.h
    ./include/flt/LevelOfDetail.h
    ./include/flt/Extension.h
    ./include/flt/LightPoint.h
    ./include/flt/RoadSegment.h
    ./include/flt/RotateAboutEdge.h
    ./include/flt/KeyTable.h
    ./include/flt/PopAttribute.h
    ./include/flt/BoundingVolumeOrientation.h
    ./include/flt/VertexWithColorNormal.h
    ./include/flt/ExtendedMaterialLightMap.h
    ./include/flt/ExtensionFieldFloat.h
    ./include/flt/MorphVertexList.h
    ./include/flt/Scale.h
    ./include/flt/CATData.h
    ./include/flt/BoundingBox.h
    ./include/flt/LongID.h
    ./include/flt/Face.h
    ./include/flt/CAT.h
    ./include/flt/ExtendedMaterialSpecular.h
    ./include/flt/Switch.h
    ./include/flt/ExtendedMaterialNormalMap.h
    ./include/flt/LocalVertexPool.h
    ./include/flt/EyepointTrackplanePalette.h
    ./include/flt/Group.h
    ./include/flt/TexturePalette.h
    ./include/flt/BoundingConvexHull.h
    ./include/flt/Text.h
    ./include/flt/PopLevel.h
    ./include/flt/RotateAboutPoint.h
    ./include/flt/DegreeOfFreedom.h
    ./include/flt/ExtendedMaterialShadowMap.h
    ./include/flt/LightPointAppearancePalette.h
    ./include/flt/IndexedString.h
    ./include/flt/TextureMappingPalette.h
    ./include/flt/Object.h
    ./include/flt/BoundingSphere.h
    ./include/flt/LineStylePalette.h
    ./include/flt/ExtendedMaterialAlpha.h
    ./include/flt/IndexedLightPoint.h
    ./include/flt/LinkagePalette.h
    ./include/flt/ExternalReference.h
    ./include/flt/Comment.h
    ./include/flt/RoadZone.h
    ./include/flt/VertexWithColorNormalUV.h
    ./include/flt/ExtendedMaterialReflectionMap.h
    ./include/flt/VertexWithColor.h
    ./include/flt/InstanceReference.h
    ./include/Queue.h
    ./include/sfa/Distance.h
    ./include/sfa/GeometryGraph.h
    ./include/sfa/PlaneFitter.h
    ./include/sfa/MultiSurface.h
    ./include/sfa/LineString.h
    ./include/sfa/Overlay3D.h
    ./include/sfa/EdgeGroupDivision.h
    ./include/sfa/PolyhedralSurface.h
    ./include/sfa/Curve.h
    ./include/sfa/PointNode.h
    ./include/sfa/Relate.h
    ./include/sfa/Surface.h
    ./include/sfa/Distance3D.h
    ./include/sfa/sfa.h
    ./include/sfa/EdgeIntersector.h
    ./include/sfa/Label.h
    ./include/sfa/MultiPoint.h
    ./include/sfa/LineMath.h
    ./include/sfa/Factory.h
    ./include/sfa/RingMath.h
    ./include/sfa/Projection2D.h
    ./include/sfa/Matrix.h
    ./include/sfa/File.h
    ./include/sfa/ConvexHull.h
    ./include/sfa/Quat.h
    ./include/sfa/GeometryCollection.h
    ./include/sfa/EdgeNodeEnd.h
    ./include/sfa/Buffer.h
    ./include/sfa/PointLineIntersector.h
    ./include/sfa/MultiPolygon.h
    ./include/sfa/Intersector.h
    ./include/sfa/GraphOperation.h
    ./include/sfa/ConvexHull3D.h
    ./include/sfa/EdgeGroup.h
    ./include/sfa/Feature.h
    ./include/sfa/RelateCompute3D.h
    ./include/sfa/GeometrySnapper.h
    ./include/sfa/PointExtractor.h
    ./include/sfa/BSP.h
    ./include/sfa/Layer.h
    ./include/sfa/SegmentIntersector.h
    ./include/sfa/Geometry.h
    ./include/sfa/MultiLineString.h
    ./include/sfa/PlanarGraph.h
    ./include/sfa/PolygonClipper.h
    ./include/sfa/Polygon.h
    ./include/sfa/PatchUnion.h
    ./include/sfa/EdgeGroupBuilder.h
    ./include/sfa/PlanarGraphOperation.h
    ./include/sfa/EnvelopeCheck.h
    ./include/sfa/EdgeNode.h
    ./include/sfa/Point.h
    ./include/sfa/Buffer3D.h
    ./include/sfa/PointMath.h
    ./include/sfa/RelateCompute.h
    ./include/sfa/RelateOperation.h
    ./include/sfa/PointLocator.h
    ./include/sfa/Overlay.h
    ./include/sfa/MultiCurve.h
    ./include/sfa/Intersector3D.h
    ./include/sfa/de9im.h
    ./include/ctl/BlockList.h
    ./include/ctl/Vector.h
    ./include/ctl/TIN.h
    ./include/ctl/DelaunayTriangulation.h
    ./include/ctl/QuadEdge.h
    ./include/ctl/Vertex.h
    ./include/ctl/ctl.h
    ./include/ctl/ConstraintMap.h
    ./include/ctl/Edge.h
    ./include/ctl/Subdivision.h
    ./include/ctl/QTriangulate.h
    ./include/ctl/CGrid.h
    ./include/ctl/ID.h
    ./include/ctl/LocationResult.h
    ./include/ctl/Util.h
    ./include/dom/CDATASection.h
    ./include/dom/Notation.h
    ./include/dom/Attr.h
    ./include/dom/DOMError.h
    ./include/dom/LSSerializer.h
    ./include/dom/dom.h
    ./include/dom/EntityReference.h
    ./include/dom/base.h
    ./include/dom/UserDataHandler.h
    ./include/dom/NodeIterator.h
    ./include/dom/DOMImplementation.h
    ./include/dom/DOMException.h
    ./include/dom/LSParser.h
    ./include/dom/LSException.h
    ./include/dom/DocumentType.h
    ./include/dom/LSOutput.h
    ./include/dom/LSInput.h
    ./include/dom/Entity.h
    ./include/dom/DOMErrorHandler.h
    ./include/dom/LSResourceResolver.h
    ./include/dom/Range.h
    ./include/dom/TypeInfo.h
    ./include/dom/Document.h
    ./include/dom/TreeWalker.h
    ./include/dom/ProcessingInstruction.h
    ./include/dom/DOMLocator.h
    ./include/dom/DOMConfiguration.h
    ./include/dom/NodeFilter.h
    ./include/dom/DocumentFragment.h
    ./include/dom/RangeException.h
    ./include/dom/LSParserFilter.h
    ./include/dom/LSSerializerFilter.h
    ./include/dom/Text.h
    ./include/dom/CharacterData.h
    ./include/dom/Element.h
    ./include/dom/Node.h
    ./include/dom/Comment.h
    ./include/dbi_sqlite/File.h
    ./include/dbi_sqlite/Statement.h
    ./include/dbi_sqlite/dbi_sqlite.h
    ./include/sqlite/sqlite3.h
    ./include/sqlite/sqlite3ext.h
    ./include/ip/GDALRasterSampler.h
    ./include/ip/imageinfo.h
    ./include/ip/ip.h
    ./include/ip/rasterPoly.h
    ./include/ip/attr.h
    ./include/ip/GDALRasterReader.h
    ./include/ip/pngwrapper.h
    ./include/ip/jpgwrapper.h
    ./include/ip/SkipList.h
    ./include/ip/rgb.h
    ./include/ogr/File.h
    ./include/ogr/Feature.h
    ./include/ogr/OGRLayer.h
    ./include/ogr/Field.h
    ./include/ogr/ogr.h
    ./include/scenegraphgltf/scenegraphgltf.h
    ./include/scenegraph_gl/scenegraph_gl.h
    ./include/lmfit/lmmin.h
    ./include/lmfit/lmstruct.h
    ./include/lmfit/lmcurve_tyd.h
    ./include/lmfit/lmcurve.h
    ./include/b64/base64.h
    ./meshgen/ws/WebServices.h
    ./include/features/FeatureInfo.h
    ./include/features/GMLParser.h
    ./include/features/GsBuildings.h


    ./include/cdb_tile/Coordinates.h
    ./include/cdb_tile/CoordinatesRange.h
    ./include/cdb_tile/Dataset.h
    ./include/cdb_tile/LOD.h
    ./include/cdb_tile/LODRange.h
    ./include/cdb_tile/Latitude.h
    ./include/cdb_tile/Longitude.h
    ./include/cdb_tile/Tile.h
    ./include/cdb_tile/TileCoordinates.h
    ./include/cdb_tile/TileLatitude.h
    ./include/cdb_tile/TileLongitude.h
    ./include/cdb_tile/util.h

	./include/dbflib/DBaseColDef.h
	./include/dbflib/DBaseField.h
	./include/dbflib/DBaseFieldProperty.h
	./include/dbflib/DBaseFile.h
	./include/dbflib/DBaseHeader.h
	./include/dbflib/DBaseRecord.h

	./include/cdb_util/cdb_util.h
	./include/cdb_util/FeatureDataDictionary.h

)


set(COGCORE_SOURCES
    ./src/cad/AttributeDictionary.cpp
    ./src/ccl/AttributeContainer.cpp
    ./src/ccl/time.cpp
    ./src/ccl/LogBuffer.cpp
    ./src/ccl/Action.cpp
    ./src/ccl/config.cpp
    ./src/ccl/Key.cpp
    ./src/ccl/Endian.cpp
    ./src/ccl/ScopedTimer.cpp
    ./src/ccl/Log.cpp
    ./src/ccl/Profile.cpp
    ./src/CoordinateSystems/EGM.cpp
    ./src/CoordinateSystems/EGM2008.cpp
    ./src/CoordinateSystems/EGMTransform.cpp
    ./src/CoordinateSystems/EllipsoidTangentPlane.cpp
    ./src/CoordinateSystems/GeoidTangentPlane.cpp
    ./src/CoordinateSystems/SphereTangentPlane.cpp
    ./src/CoordinateSystems/WGS84Transform.cpp
    ./src/ccl/Unix/Runnable.cpp
    ./src/ccl/Unix/mutex.cpp
    ./src/ccl/Unix/sem.cpp
    ./src/ccl/Unix/Timer.cpp
    ./src/ccl/ObjLog.cpp
    ./src/ccl/datetime.cpp
    ./src/ccl/Op.cpp
    ./src/ccl/uuid.cpp
    ./src/ccl/Value.cpp
    ./src/ccl/date.cpp
    ./src/ccl/LogStream.cpp
    ./src/ccl/binary.cpp
    ./src/ccl/md5.cpp
    ./src/ccl/object.cpp
    ./src/ccl/inspection.cpp
    ./src/ccl/FileInfo.cpp
    ./src/ccl/Expression.cpp
#    ./src/ccl/Win32/Runnable.cpp
#    ./src/ccl/Win32/mutex.cpp
#    ./src/ccl/Win32/sem.cpp
#    ./src/ccl/Win32/Timer.cpp
    ./src/ccl/JobManager.cpp
    ./src/ccl/Number.cpp
    ./src/ccl/Variant.cpp
    ./src/ccl/primitive.cpp
    ./src/ccl/ProgressObserver.cpp
    ./src/ccl/miniz.c
    ./src/ccl/ArgumentParser.cpp
    ./src/sfa_file_factory/sfa_file_factory.cpp
    ./src/gltf/GltfJson.cpp
    ./src/gltf/GltfInfo.cpp
    ./src/gltf/GltfData.cpp
    ./src/gltf/Tileset.cpp
    ./src/elev/Elevation.cpp
    ./src/elev/Cache.cpp
    ./src/elev/CacheEntry.cpp
    ./src/elev/DataPost.cpp
    ./src/elev/Elevation_DSM.cpp
    ./src/elev/SimpleDEMReader.cpp
    ./src/elev/DataSourceManager.cpp
    ./src/elev/DataSource.cpp
    ./src/elev/DataSource_Raster_GDAL.cpp
    ./src/elev/DataSource_Raster.cpp
    ./src/scenegraphflt/buildSceneFromOpenFlight.cpp
    ./src/scenegraphflt/buildOpenFlightFromScene.cpp
    ./src/tg/TerrainGenerator.cpp
    ./src/tg/FbxTerrainGenerator.cpp
    ./src/tg/GltfTerrainGenerator.cpp
    ./src/tg/ObjTerrainGenerator.cpp
    ./src/tg/OpenFlightTerrainGenerator.cpp
    ./src/cts/WGS84ToFlatEarthMathTransform.cpp
    ./src/cts/CS_GeographicCoordinateSystem.cpp
    ./src/cts/ProjInfo.cpp
    ./src/cts/CS_FittedCoordinateSystem.cpp
    ./src/cts/CS_HorizontalDatum.cpp
    ./src/cts/WGS84FromOrthographicMathTransform.cpp
    ./src/cts/TransformRegistry.cpp
    ./src/cts/CS_Ellipsoid.cpp
    ./src/cts/CS_Projection.cpp
    ./src/cts/CS_LocalDatum.cpp
    ./src/cts/CS_PrimeMeridian.cpp
    ./src/cts/CS_CoordinateSystemFactory.cpp
    ./src/cts/CS_CoordinateSystem.cpp
    ./src/cts/CS_Info.cpp
    ./src/cts/CS_VerticalDatum.cpp
    ./src/cts/CS_Unit.cpp
    ./src/cts/CS_HorizontalCoordinateSystem.cpp
    ./src/cts/CT_CoordinateTransformationFactory.cpp
    ./src/cts/CS_LinearUnit.cpp
    ./src/cts/WGS84FromFlatEarthMathTransform.cpp
    ./src/cts/WGS84ToOrthographicMathTransform.cpp
    ./src/cts/FlatEarthProjection.cpp
    ./src/cts/CS_AngularUnit.cpp
    ./src/cts/CT_MathTransform.cpp
    ./src/cts/CS_Datum.cpp
    ./src/cts/CS_GeocentricCoordinateSystem.cpp
    ./src/cts/CT_CoordinateTransformation.cpp
    ./src/cts/CS_LocalCoordinateSystem.cpp
    ./src/cts/WGS84Orthographic.cpp
    ./src/cts/CS_VerticalCoordinateSystem.cpp
    ./src/cts/CT_MathTransformFactory.cpp
    ./src/cts/CS_CompoundCoordinateSystem.cpp
    ./src/cts/CS_ProjectedCoordinateSystem.cpp
    ./src/scenegraph/TransformVisitor.cpp
    ./src/scenegraph/Visitor.cpp
    ./src/scenegraph/Scene.cpp
    ./src/scenegraph/GroupingVisitor.cpp
    ./src/scenegraph/buildSceneFromFeature.cpp
    ./src/scenegraph/MappedTexture.cpp
    ./src/scenegraph/SGLineString.cpp
    ./src/scenegraph/DrapeVisitor.cpp
    ./src/scenegraph/LOD.cpp
    ./src/scenegraph/CoordinateTransformVisitor.cpp
    ./src/scenegraph/ExternalReference.cpp
    ./src/scenegraph/SGNode.cpp
    ./src/scenegraph/LightPoint.cpp
    ./src/scenegraph/Octree.cpp
    ./src/scenegraph/ExtentsVisitor.cpp
    ./src/scenegraph/drapeFeature.cpp
    ./src/scenegraph/TerrainCullingVisitor.cpp
    ./src/scenegraph/Color.cpp
    ./src/scenegraph/Face.cpp
    ./src/scenegraph/FlattenVisitor.cpp
    ./src/scenegraph/SetTexturePathVisitor.cpp
    ./src/scenegraph/Material.cpp
    ./src/scenegraph/SceneCropper.cpp
    ./src/scenegraph/Relationship.cpp
    ./src/scenegraph/MappedTextureMatrix.cpp
    ./src/flt/PopExtension.cpp
    ./src/flt/FltText.cpp
    ./src/flt/MultiTexture.cpp
    ./src/flt/FltComment.cpp
    ./src/flt/Scale.cpp
    ./src/flt/ExtendedMaterialBumpMap.cpp
    ./src/flt/LocalVertexPool.cpp
    ./src/flt/LineStylePalette.cpp
    ./src/flt/PushExtension.cpp
    ./src/flt/CAT.cpp
    ./src/flt/PopSubface.cpp
    ./src/flt/BoundingSphere.cpp
    ./src/flt/LongID.cpp
    ./src/flt/PushLevel.cpp
    ./src/flt/ExtensionFieldDouble.cpp
    ./src/flt/ExtendedMaterialReflectionMap.cpp
    ./src/flt/ShaderPalette.cpp
    ./src/flt/VertexWithColorNormal.cpp
    ./src/flt/RoadConstruction.cpp
    ./src/flt/BoundingConvexHull.cpp
    ./src/flt/ExtendedMaterialNormalMap.cpp
    ./src/flt/PopLevel.cpp
    ./src/flt/RotateAboutEdge.cpp
    ./src/flt/KeyTable.cpp
    ./src/flt/ExtendedMaterialShadowMap.cpp
    ./src/flt/FltVector.cpp
    ./src/flt/CATData.cpp
    ./src/flt/ClipRegion.cpp
    ./src/flt/LightPointSystem.cpp
    ./src/flt/MorphVertexList.cpp
    ./src/flt/GeneralMatrix.cpp
    ./src/flt/NameTable.cpp
    ./src/flt/LightPointAnimationPalette.cpp
    ./src/flt/PushAttribute.cpp
    ./src/flt/PopAttribute.cpp
    ./src/flt/ExtendedMaterialDiffuse.cpp
    ./src/flt/ExtensionFieldInteger.cpp
    ./src/flt/TexturePalette.cpp
    ./src/flt/BoundingHistogram.cpp
    ./src/flt/Switch.cpp
    ./src/flt/LevelOfDetail.cpp
    ./src/flt/Record.cpp
    ./src/flt/RoadZone.cpp
    ./src/flt/ExtensionFieldString.cpp
    ./src/flt/VertexWithColorNormalUV.cpp
    ./src/flt/PushSubface.cpp
    ./src/flt/MaterialPalette.cpp
    ./src/flt/IndexedString.cpp
    ./src/flt/ExtendedMaterialAlpha.cpp
    ./src/flt/InstanceReference.cpp
    ./src/flt/Put.cpp
    ./src/flt/SoundPalette.cpp
    ./src/flt/RotateScaleToPoint.cpp
    ./src/flt/FltMesh.cpp
    ./src/flt/ExtensionFieldXML.cpp
    ./src/flt/DegreeOfFreedom.cpp
    ./src/flt/MeshPrimitive.cpp
    ./src/flt/Extension.cpp
    ./src/flt/ExtensionGUIDPalette.cpp
    ./src/flt/ExtendedMaterialAmbient.cpp
    ./src/flt/ExtendedMaterialHeader.cpp
    ./src/flt/FltObject.cpp
    ./src/flt/FltFace.cpp
    ./src/flt/BoundingCylinder.cpp
    ./src/flt/RoadPath.cpp
    ./src/flt/LightPointAppearancePalette.cpp
    ./src/flt/LightSourcePalette.cpp
    ./src/flt/BoundingVolumeCenter.cpp
    ./src/flt/FltMatrix.cpp
    ./src/flt/ExtendedMaterialSpecular.cpp
    ./src/flt/VertexList.cpp
    ./src/flt/OpenFlight.cpp
    ./src/flt/ColorPalette.cpp
    ./src/flt/FltLightPoint.cpp
    ./src/flt/TextureMappingPalette.cpp
    ./src/flt/VertexWithColorUV.cpp
    ./src/flt/Translate.cpp
    ./src/flt/Replicate.cpp
    ./src/flt/FltCurve.cpp
    ./src/flt/RotateAboutPoint.cpp
    ./src/flt/Unknown.cpp
    ./src/flt/RoadSegment.cpp
    ./src/flt/VertexWithColor.cpp
    ./src/flt/ExtendedMaterialEmissive.cpp
    ./src/flt/VertexPalette.cpp
    ./src/flt/UVList.cpp
    ./src/flt/ExtendedMaterialLightMap.cpp
    ./src/flt/LightSource.cpp
    ./src/flt/LinkagePalette.cpp
    ./src/flt/Sound.cpp
    ./src/flt/FltExternalReference.cpp
    ./src/flt/BoundingBox.cpp
    ./src/flt/BoundingVolumeOrientation.cpp
    ./src/flt/IndexedLightPoint.cpp
    ./src/flt/ExtensionFieldBoolean.cpp
    ./src/flt/ExtensionFieldFloat.cpp
    ./src/flt/EyepointTrackplanePalette.cpp
    ./src/flt/Header.cpp
    ./src/flt/InstanceDefinition.cpp
    ./src/flt/Group.cpp
    ./src/flt/BinarySeparatingPlane.cpp
    ./src/sfa/RingMath.cpp
    ./src/sfa/Point.cpp
    ./src/sfa/PatchUnion.cpp
    ./src/sfa/Intersector3D.cpp
    ./src/sfa/EdgeNodeEnd.cpp
    ./src/sfa/sfa_file.cpp
    ./src/sfa/GraphOperation.cpp
    ./src/sfa/RelateCompute3D.cpp
    ./src/sfa/PlanarGraphOperation.cpp
    ./src/sfa/PointLocator.cpp
    ./src/sfa/Feature.cpp
    ./src/sfa/EdgeGroupDivision.cpp
    ./src/sfa/EdgeNode.cpp
    ./src/sfa/PointNode.cpp
    ./src/sfa/RelateCompute.cpp
    ./src/sfa/PlaneFitter.cpp
    ./src/sfa/Curve.cpp
    ./src/sfa/Quat.cpp
    ./src/sfa/PointExtractor.cpp
    ./src/sfa/Relate.cpp
    ./src/sfa/EdgeIntersector.cpp
    ./src/sfa/Intersector.cpp
    ./src/sfa/Buffer3D.cpp
    ./src/sfa/RelateOperation.cpp
    ./src/sfa/Polygon.cpp
    ./src/sfa/Geometry.cpp
    ./src/sfa/Factory.cpp
    ./src/sfa/Distance.cpp
    ./src/sfa/Projection2D.cpp
    ./src/sfa/MultiLineString.cpp
    ./src/sfa/GeometrySnapper.cpp
    ./src/sfa/EdgeGroup.cpp
    ./src/sfa/PlanarGraph.cpp
    ./src/sfa/EnvelopeCheck.cpp
    ./src/sfa/de9im.cpp
    ./src/sfa/ConvexHull3D.cpp
    ./src/sfa/GeometryGraph.cpp
    ./src/sfa/MultiCurve.cpp
    ./src/sfa/LineString.cpp
    ./src/sfa/MultiPoint.cpp
    ./src/sfa/Matrix.cpp
    ./src/sfa/PointMath.cpp
    ./src/sfa/Overlay3D.cpp
    ./src/sfa/LineMath.cpp
    ./src/sfa/Overlay.cpp
    ./src/sfa/MultiPolygon.cpp
    ./src/sfa/Label.cpp
    ./src/sfa/SegmentIntersector.cpp
    ./src/sfa/ConvexHull.cpp
    ./src/sfa/PointLineIntersector.cpp
    ./src/sfa/Layer.cpp
    ./src/sfa/Distance3D.cpp
    ./src/sfa/PolyhedralSurface.cpp
    ./src/sfa/GeometryCollection.cpp
    ./src/sfa/EdgeGroupBuilder.cpp
    ./src/sfa/BSP.cpp
    ./src/sfa/MultiSurface.cpp
    ./src/sfa/Surface.cpp
    ./src/sfa/Buffer.cpp
    ./src/sfa/PolygonClipper.cpp
    ./src/ctl/LocationResult.cpp
    ./src/ctl/Edge.cpp
    ./src/ctl/QuadEdge.cpp
    ./src/ctl/TIN.cpp
    ./src/ctl/QTriangulate.cpp
    ./src/ctl/CGrid.cpp
    ./src/ctl/DelaunayTriangulation.cpp
    ./src/ctl/Subdivision.cpp
    ./src/ctl/Vertex.cpp
    ./src/ctl/Util.cpp
    ./src/ctl/ID.cpp
    ./src/ctl/Vector.cpp
    ./src/ctl/ConstraintMap.cpp
    ./src/dom/NodeIterator.cpp
    ./src/dom/DOMConfiguration.cpp
    ./src/dom/NodeFilter.cpp
    ./src/dom/Entity.cpp
    ./src/dom/DOMError.cpp
    ./src/dom/DOMImplementation.cpp
    ./src/dom/Element.cpp
    ./src/dom/Notation.cpp
    ./src/dom/Node.cpp
    ./src/dom/DocumentFragment.cpp
    ./src/dom/CharacterData.cpp
    ./src/dom/Document.cpp
    ./src/dom/LSOutput.cpp
    ./src/dom/Text.cpp
    ./src/dom/ProcessingInstruction.cpp
    ./src/dom/EntityReference.cpp
    ./src/dom/Comment.cpp
    ./src/dom/TypeInfo.cpp
    ./src/dom/DocumentType.cpp
    ./src/dom/LSSerializer.cpp
    ./src/dom/DOMLocator.cpp
    ./src/dom/Range.cpp
    ./src/dom/Attr.cpp
    ./src/dom/LSParser.cpp
    ./src/dom/LSInput.cpp
    ./src/dom/CDATASection.cpp
    ./src/dom/TreeWalker.cpp
    ./src/dbi_sqlite/Statement.cpp
    ./src/dbi_sqlite/dbi_sqlite_file.cpp
    ./src/ip/pngwrapper.cpp
    ./src/ip/GDALRasterReader.cpp
    ./src/ip/jpgwrapper.cpp
    ./src/ip/attr_file.cpp
    ./src/ip/rasterPoly.cpp
    ./src/ip/rgb.cpp
    ./src/ip/GDALRasterSampler.cpp
    ./src/ip/ip.cpp
    ./src/ogr/OGRLayer.cpp
    ./src/ogr/File.cpp
    ./src/ogr/Field.cpp
    ./src/meshgen/meshgen.cpp
    ./src/scenegraphgltf/buildGltfFromScene.cpp
    ./src/scenegraphfbx/buildFbxFromScene.cpp
    ./src/scenegraphobj/buildObjFromScene.cpp
    ./src/scenegraphobj/buildSceneFromOBJ.cpp
    ./src/b64/base64.cpp    
    ./meshgen/ws/WebServices.cpp
    ./include/sqlite/sqlite3.c
    ./src/lmfit/lmmin.c
    ./src/lmfit/lmcurve.c
    ./src/lmfit/lmcurve_tyd.c
    ./src/features/FeatureInfo.cpp
    ./src/features/GMLParser.cpp
    ./src/features/GsBuildings.cpp
    ./src/cdb_tile/CDBLOD.cpp
    ./src/cdb_tile/Coordinates.cpp
    ./src/cdb_tile/CoordinatesRange.cpp
    ./src/cdb_tile/Dataset.cpp
    ./src/cdb_tile/LODRange.cpp
    ./src/cdb_tile/Latitude.cpp
    ./src/cdb_tile/Longitude.cpp
    ./src/cdb_tile/Tile.cpp
    ./src/cdb_tile/TileCoordinates.cpp
    ./src/cdb_tile/TileLatitude.cpp
    ./src/cdb_tile/TileLongitude.cpp

	./src/dbflib/DBaseColDef.cpp
	./src/dbflib/DBaseField.cpp
	./src/dbflib/DBaseFieldProperty.cpp
	./src/dbflib/DBaseFile.cpp
	./src/dbflib/DBaseHeader.cpp
	./src/dbflib/DBaseRecord.cpp

	./src/cdb_util/cdb_util.cpp
	./src/cdb_util/FeatureDataDictionary.cpp
)

add_library(cogcore ${COGCORE_SOURCES} ${COGCORE_HEADERS})

add_definitions(-DLINUX)

add_executable(cdbinfo ./cdbinfo/cdbinfo.cpp  )
target_link_libraries(cdbinfo ${CMAKE_DL_LIBS})
target_link_libraries(cdbinfo cogcore)
target_link_libraries(cdbinfo "pthread")
target_link_libraries(cdbinfo "${THIRD_PARTY_DIR}/linux_x64/lib/libgdal.so")
target_link_libraries(cdbinfo "${THIRD_PARTY_DIR}/ipp2019_linux_x64/lib/intel64/libippi.a")
target_link_libraries(cdbinfo "${THIRD_PARTY_DIR}/ipp2019_linux_x64/lib/intel64/libipps.a")
target_link_libraries(cdbinfo "${THIRD_PARTY_DIR}/ipp2019_linux_x64/lib/intel64/libippcore.a")

add_executable(cdb-inject ./cdb-inject/cdb-inject.cpp  )
target_link_libraries(cdb-inject ${CMAKE_DL_LIBS})
target_link_libraries(cdb-inject cogcore)
target_link_libraries(cdb-inject "pthread")
target_link_libraries(cdb-inject "${THIRD_PARTY_DIR}/linux_x64/lib/libgdal.so")
target_link_libraries(cdb-inject "${THIRD_PARTY_DIR}/ipp2019_linux_x64/lib/intel64/libippi.a")
target_link_libraries(cdb-inject "${THIRD_PARTY_DIR}/ipp2019_linux_x64/lib/intel64/libipps.a")
target_link_libraries(cdb-inject "${THIRD_PARTY_DIR}/ipp2019_linux_x64/lib/intel64/libippcore.a")

add_executable(meshgen ./meshgen/meshgen.cpp  )

target_link_libraries(meshgen ${CMAKE_DL_LIBS})
target_link_libraries(meshgen cogcore)
target_link_libraries(meshgen "pthread")
target_link_libraries(meshgen "${THIRD_PARTY_DIR}/fbxsdk/lib/gcc4/x64/release/libfbxsdk.a")
target_link_libraries(meshgen "${THIRD_PARTY_DIR}/linux_x64/lib/libcurl.so")
target_link_libraries(meshgen "${THIRD_PARTY_DIR}/linux_x64/lib/libgdal.so")
target_link_libraries(meshgen "${THIRD_PARTY_DIR}/linux_x64/lib/libpng15.so")
target_link_libraries(meshgen "${THIRD_PARTY_DIR}/linux_x64/lib/libjpeg.so")
target_link_libraries(meshgen "${THIRD_PARTY_DIR}/ipp2019_linux_x64/lib/intel64/libippi.a")
target_link_libraries(meshgen "${THIRD_PARTY_DIR}/ipp2019_linux_x64/lib/intel64/libipps.a")
target_link_libraries(meshgen "${THIRD_PARTY_DIR}/ipp2019_linux_x64/lib/intel64/libippcore.a")


IF(COG_BUILD_GL_TOOLS)
    add_executable(mesh2cdb ./mesh2cdb/quickobj.cpp ./mesh2cdb/mesh2cdb.cpp ./mesh2cdb/mesh2cdb.h ./mesh2cdb/meshconvert.cpp ./mesh2cdb/MeshRender.h ./mesh2cdb/meshrender.cpp ./src/scenegraph_gl/scenegraph_gl.cpp)
    target_link_libraries(mesh2cdb ${CMAKE_DL_LIBS})
    target_link_libraries(mesh2cdb "/usr/lib/x86_64-linux-gnu/libEGL.so")
    target_link_libraries(mesh2cdb "/usr/lib/x86_64-linux-gnu/libGLX.so")
    target_link_libraries(mesh2cdb cogcore)
    target_link_libraries(mesh2cdb "OpenGL.so")
    target_link_libraries(mesh2cdb "GLU")
    target_link_libraries(mesh2cdb "pthread")
    target_link_libraries(mesh2cdb "${THIRD_PARTY_DIR}/fbxsdk/lib/gcc4/x64/release/libfbxsdk.a")
    target_link_libraries(mesh2cdb "${THIRD_PARTY_DIR}/linux_x64/lib/libcurl.so")
    target_link_libraries(mesh2cdb "${THIRD_PARTY_DIR}/linux_x64/lib/libgdal.so")
    target_link_libraries(mesh2cdb "${THIRD_PARTY_DIR}/linux_x64/lib/libpng15.so")
    target_link_libraries(mesh2cdb "${THIRD_PARTY_DIR}/linux_x64/lib/libjpeg.so")
    target_link_libraries(mesh2cdb "${THIRD_PARTY_DIR}/ipp2019_linux_x64/lib/intel64/libippcore.so")
    target_link_libraries(mesh2cdb "${THIRD_PARTY_DIR}/ipp2019_linux_x64/lib/intel64/libippvm.so")
    target_link_libraries(mesh2cdb "${THIRD_PARTY_DIR}/ipp2019_linux_x64/lib/intel64/libipps.so")
    target_link_libraries(mesh2cdb "${THIRD_PARTY_DIR}/ipp2019_linux_x64/lib/intel64/libippi.so")
    target_link_libraries(mesh2cdb "${THIRD_PARTY_DIR}/glew/linux_x64/lib/libGLEW.a")
    target_link_libraries(mesh2cdb "${THIRD_PARTY_DIR}/glut/linux_x64/lib/libglut.so")
    install(TARGETS mesh2cdb DESTINATION bin)
ENDIF(COG_BUILD_GL_TOOLS)

install(TARGETS meshgen DESTINATION bin)
install(DIRECTORY ${THIRD_PARTY_DIR}/ipp2019_linux_x64/lib/intel64_lin/ DESTINATION lib FILES_MATCHING PATTERN "*.so" PATTERN "*.a")
install(DIRECTORY ${THIRD_PARTY_DIR}/linux_x64/ DESTINATION .)
install(DIRECTORY ${THIRD_PARTY_DIR}/glew/linux_x64/lib/ DESTINATION lib FILES_MATCHING PATTERN "*.so" PATTERN "*.a")

